[package]
name = "TyrsTunes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
eframe = { version = "0.28.1" }
id3 = "1.14.0"
rodio = "0.19.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
walkdir = "2.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.14.1", default-features = false, features = ["gtk3"] }

[target.'cfg(target_os = "windows")'.dependencies]
rfd = { version = "0.14.1" }

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "target-feature=+crt-static"]
